--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hi there! I'm a passionate <strong> Fullstack Developer </strong> with expertise in Java and React.  Over 8 years, I've honed my skills to craft robust, scalable applications that meet and exceed client expectations. Let me give you a glimpse into my journey and what makes me tick as a developer.</p>
+          <p>Hi there! I'm a passionate <strong> Senior Fullstack Developer </strong> with expertise in Java and React.  Over 8 years, I've honed my skills to craft robust, scalable applications that meet and exceed client expectations. Let me give you a glimpse into my journey and what makes me tick as a developer.</p>
           <p>I am a quick learner and a team worker that gets the job done.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
