--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
-<!--  <div class="shadow-1-strong bg-white my-5 p-5" id="contact">-->
-<!--    <div class="contant-section">-->
-<!--      <h2 class="h2 fw-light text mb-4">Contact</h2>-->
-<!--      <div class="row mb-4">-->
-<!--        <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">-->
-<!--          <div class="mt-1">-->
-<!--            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +0718-111-0011</div>-->
-<!--            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> walter@company.com</div>-->
-<!--          </div>-->
+  <div class="shadow-1-strong bg-white my-5 p-5" id="contact">
+    <div class="contant-section">
+      <h2 class="h2 fw-light text mb-4">Contact</h2>
+      <div class="row mb-4">
+        <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
+          <div class="mt-1">
+            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +84344817921</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> thoaitran93@gmail.com</div>
+          </div>
 <!--          <div class="mt-5 d-print-none">-->
 <!--            <form action="https://formspree.io/your@email.com" method="POST">-->
 <!--              <div class="form-outline mb-4">-->
@@ -352,10 +352,12 @@
 <!--              <button class="btn btn-info btn-block mb-4" type="submit">Send</button>-->
 <!--            </form>-->
 <!--          </div>-->
-<!--        </div>-->
-<!--        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.9774799129763!2d-73.98032087190995!3d40.765927126473905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f9cfcb250d%3A0xdb570ddcb766e3a8!2sNew%20York%20City%20Center!5e0!3m2!1sen!2sin!4v1614183731149!5m2!1sen!2sin" width="500" height="400" style="border:0;width:100%;" allowfullscreen="" loading="lazy"></iframe></div>-->
-<!--      </div>-->
-<!--    </div>-->
+        </div>
+        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.006472091722!2d106.68154557586894!3d10.810815658556754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528dd914a7d81%3A0x96ec0f72db6eaea!2zMjI4IE5ndXnhu4VuIFRoxrDhu6NuZyBIaeG7gW4sIFBoxrDhu51uZyAxLCBHw7IgVuG6pXAsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1717460411832!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </div>
 <!--  </div>-->
 </div></div>
     </div>
